# test-topendsports-content-briefs

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  ADVANCED-SECURITY-SETUP.md  AHREFS_API_QUICK_REFERENCE.md  AHREFS_API_TEST_RESULTS.md  AHREFS_MCP_PROXY_FIX.md  CI_SETUP.md  CLAUDE.md  CONTRIBUTING.md  CORE-SPECIALIZATION.md  CREATION_SUMMARY.md  Content Tracking.xlsx  DELIVERABLES_CHECKLIST.md  ERROR_HANDLING_QUICK_REFERENCE.md  FINAL_SUMMARY.md  Feed back to Claude Code copeid from previous chat.txt  IMPROVEMENTS_SUMMARY.md  INTEGRATION-REPORT.md  MCP_FIX_FOR_AHREFS.md  Makefile  PATTERN-ANALYZER-README.md  PHASE1-UNIT-TEST-REPORT.json  PHASE1-UNIT-TEST-REPORT.md  PHASE3-COMPLETE-ANALYSIS.md  PHASE3-INDEX.md  PHASE3-REGRESSION-SUMMARY.txt  PHASE3-REGRESSION-TEST-REPORT.json  PHASE3-REGRESSION-TEST-REPORT.md  PROMPT_MONITOR_ENHANCEMENTS.md  QUICKSTART.md  README.md  REPOSITORY-SETTINGS.md  SECURITY.md  TESTING-RULES.md  TESTING.md  (+21 more)
.claude/: session-start-mcp.sh  settings.json  settings.local.json.example
.claude-setup/: README.md  settings.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
analysis/: bonuses-promo-codes-content-template.md  bonuses-vs-promo-codes-decision-summary.md  bonuses-vs-promo-codes-serp-analysis.md
content-briefs-skill/: BRIEF-GENERATION-PROMPT.md  GUARDRAILS.md  IMPROVEMENTS.md  ISSUES-SESSION-2025-12-05.md  OPTIMAL-STARTING-PROMPT.md  ORCHESTRATOR.md  PROJECT-DESCRIPTION.md  PROJECT-INSTRUCTIONS.md  SKILL.md  (+1 more)
tests/: README.md  (+11 more)
(+1118 files in other folders)
